--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -50,9 +50,9 @@
 \head{Технологии реализации}
   {Лекции: офлайн-занятия, практика: офлайн-занятия}
 \head{Разработчики}
-  {}
+  {Бугаенко Егор Георгиевич}
 \head{Утверждение}
-  {}
+  {---}
 \end{tabularx}
 
 \section{Цели курса}
@@ -64,6 +64,13 @@
     \item Понимать, из чего состоит оценка качества программных продуктов;
     \item Уметь проводить научные исследования в сфере анализа репозиториев с программным кодом;
     \item Уметь пользоваться инструментами анализа качества кода.
+\end{itemize}
+
+Предполагается, что к началу курса студент умеет:
+\begin{itemize}
+    \item Самостоятельно программировать на одном из популярных языков, таких как Java, JavaScript, Python или C++;
+    \item Самостоятельно управлять репозиторием проекта с помощью Git;
+    \item Самостоятельно моделировать архитектуру программного проекта, используя UML.
 \end{itemize}
 
 Лучшие студенты опубликуют результаты своего исследования на одной из научных конференций.
@@ -101,6 +108,10 @@
 
 Порядок лекций может меняться, а тематика корректироваться в зависимости от интереса аудитории.
 
+Тип аудиторий: лекционные (для лекционных занятий).
+
+Оснащение аудиторий: наличие Wi-Fi.
+
 \section{Аттестация}
 
 В рамках курса студенты должны разделиться на группы по 1--3 человека. Каждая группа должна выбрать одну из исследовательских тем, предложенных на первой лекции. По выбранной теме необходимо провести исследование и оформить его результаты в научную статью на английском языке, объемом 7--12 страниц формата \href{https://ctan.org/pkg/acmart}{acmart/sigplan}. Статья должна содержать обязательные разделы: Abstract, Introduction, Related Work, Method, Experimental Results, Discussion, Conclusion и References.
@@ -121,6 +132,26 @@
 Статья принята на конференции CORE-A & 10 \\
 \bottomrule
 \end{tabularx}
+
+Пересдача невозможна.
+
+\section{Самостоятельная работа}
+
+Работая самостоятельно над темой исследования, ожидается, что студент выполнит следующее:
+\begin{itemize}
+    \item Изучит существующие статьи и книги, касающиеся темы исследования;
+    \item Сформулирует research question;
+    \item Определит метод исследования;
+    \item Проведет исследования и соберет данные;
+    \item Проанализирует результаты;
+    \item Выявит слабые стороны и опишет их;
+    \item Сделает вывод;
+    \item Оформит статью.
+\end{itemize}
+
+Дополнительную помощь можно получить в этой статье:
+\href{https://www.yegor256.com/2022/08/24/research-paper-template.html}{Research Paper Simple Template}
+(и в материалах, на которые статья ссылается).
 
 \section{Литература}
 
