--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -28,12 +28,6 @@
 
 \plush{\sqmTitlePage{1}}
 
-\newcounter{thght}
-\newcommand\thought[1]{
-  \addtocounter{thght}{1}
-  \plush{\pptThought{\textcolor{orange}{\Huge\thethght.} #1}}
-}
-
 \thought{Everybody wants higher \emph{quality of code}, but nobody knows how to measure it.}
 
 \thought{Code \emph{maintainability}, probably, is the ultimate objective of increasing the quality of source code.}
@@ -44,13 +38,18 @@
 
 \thought{Instead of counting lines, it may be more reasonable to count NCSS (Non Commenting Source Statements), but not always.}
 
-\thought{There are \href{https://www.linux.com/news/linux-in-2020-27-8-million-lines-of-code-in-the-kernel-1-3-million-in-systemd/}{27.8M} lines of C code in Linux kernel.}
+\thought{There are \href{https://www.linux.com/news/linux-in-2020-27-8-million-lines-of-code-in-the-kernel-1-3-million-in-systemd/}{27.8M} lines of C code in Linux kernel. What does it tell us?}
+
+\thought{In 2011, Uncle Bob \href{https://softwareengineering.stackexchange.com/questions/66523}{suggested} that 200 lines per Java class is a good guideline to stay below.}
+
+\thought{Java is \href{http://jameshfisher.github.io/languageredundancy/}{two times} more verbose than Ruby. Does it mean the quality of an average Ruby code is higher?}
 
 \plush{
   \pptBanner{Read this:}\par
   \href{https://www.yegor256.com/2017/12/26/software-quality-formula.html}{The Formula for Software Quality} (2017)\par
   \href{https://www.yegor256.com/2014/04/11/cost-of-loc.html}{How Much Do You Pay Per Line of Code?} (2014)\par
   \href{https://www.yegor256.com/2014/11/14/hits-of-code.html}{Hits-of-Code Instead of SLoC} (2014)\par
+  \href{https://www.yegor256.com/2014/08/13/strict-code-quality-control.html}{Strict Control of Java Code Quality} (2014)\par
 }
 
 \end{document}
