--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -123,11 +123,11 @@
 \toprule
 Результат & Баллы \\
 \midrule
-Студент представил черновик статьи (2+ страниц) в конце первого модуля & 1 \\
-Студент представил черновик статьи (4+ страниц) в конце второго модуля & 2 \\
+Студент представил черновик статьи (2+ страниц) до конца первого модуля & 1 \\
+Студент представил черновик статьи (4+ страниц) до конца второго модуля & 1 \\
 Студент посетил 10 или более лекций & 1 \\
-Студент посетил 20 или более лекций & 1 \\
-Студент отправил статью на конференцию после разрешения преподавателя & 2 \\
+Студент посетил 20 или более лекций & 3 \\
+Студент отправил статью на конференцию после разрешения преподавателя & 1 \\
 Статья принята на конференции CORE-B & 7 \\
 Статья принята на конференции CORE-A & 10 \\
 \bottomrule
