--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -29,6 +29,23 @@
 
 \thought{Some programmers mistakenly feel proud of higher complexity of their code.}
 
+\thought{Cyclomatic Complexity (CC) was suggested by Thomas~J.~McCabe,~Sr. in 1976: \(C=E-N+2\). It is a count of the number of decisions in the source code. The higher the count, the more complex the code.}
+
+\plush{
+\pptBanner{What is the complexity of this program?}
+\pptPic{.5}{cc.png}\par
+I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding-a-small-note-on-cyclomatic-complexity/}{here}.}
+
+\thought{In his presentation "\textit{Software Quality Metrics to Identify Risk}", Tom McCabe introduces the following categorisation to interpret cyclomatic complexity: 1--10 little risk, 11--20 moderate risk, 21--50 high risk, 50+ very high risk.}
+
+\thought{Graylin JAY et al., \textit{Cyclomatic Complexity and Lines of Code: Empirical Evidence of a Stable Linear Relationship}, Journal of Software Engineering \& Applications, Vol. 2, 2009, pp. 137--143}
+
+\thought{What is a complexity of a class, not a method?}
+
+\thought{What is a complexity of a package or a project?}
+
+\thought{\emph{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
+
 \plush{
   \pptBanner{Read this:}\par
   \href{https://www.yegor256.com/2015/06/29/simple-diagrams.html}{The Better Architect You Are, The Simpler Your Diagrams} (2015)\par
