--- a/sqm.sty
+++ b/sqm.sty
@@ -54,14 +54,14 @@
   \pptTitle{\thetitle}{}\par
   {\scshape Yegor Bugayenko}\par
   Lecture \##1 out of 24 \newline
-  90 minutes\par
+  80 minutes\par
   \sqmDisclaimer{}
 }
 
 \newcounter{thght}
 \newcommand\thought[1]{
   \addtocounter{thght}{1}
-  \plush{\pptThought{\textcolor{orange}{\Huge\thethght.} #1}}
+  \plush{\pptThought{\raggedright\textcolor{orange}{\Huge\thethght.} #1}}
 }
 
 \newcommand\nospell[1]{#1}
