--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -40,9 +40,7 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
 
 \thought{Graylin JAY et al., \textit{Cyclomatic Complexity and Lines of Code: Empirical Evidence of a Stable Linear Relationship}, Journal of Software Engineering \& Applications, Vol. 2, 2009, pp. 137--143}
 
-\thought{What is a complexity of a class, not a method?}
-
-\thought{What is a complexity of a package or a project?}
+\thought{What is a complexity of a class? How about a module?}
 
 \thought{\emph{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
 
