--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -44,6 +44,8 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
 
 \thought{\emph{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
 
+\thought{Tom McCabe suggested to prohibit functions where CC is larger than \emph{ten}. Modern static analyzers may help you control this automatically.}
+
 \plush{
   \pptBanner{Read this:}\par
   \href{https://www.yegor256.com/2015/06/29/simple-diagrams.html}{The Better Architect You Are, The Simpler Your Diagrams} (2015)\par
