--- a/sqm.sty
+++ b/sqm.sty
@@ -50,13 +50,13 @@
   respected authors.\par
 }}
 
-\newcommand\sqmTitlePage[1]{%
+\newcommand\sqmTitlePage[1]{\begin{pptMiddle}%
   \pptTitle{\thetitle}{}\par
   {\scshape Yegor Bugayenko}\par
   Lecture \##1 out of 24 \newline
   80 minutes\par
   \sqmDisclaimer{}
-}
+\end{pptMiddle}}
 
 \newcounter{thght}
 \newcommand\thought[1]{
