--- a/sqm.sty
+++ b/sqm.sty
@@ -64,6 +64,8 @@
   \plush{\pptThought{\raggedright\textcolor{orange}{\Huge\thethght.} #1}}
 }
 
+\newcommand\pitch[1]{\plush{\begin{pptMiddle} #1 \end{pptMiddle}}}
+
 \newcommand\nospell[1]{#1}
 
 \AtBeginDocument{%
