--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -82,7 +82,7 @@
     \setlength\itemsep{0em}
     \item Lines of Code
     \item McCabe's Cyclomatic Complexity
-    \item Perceived Complexity
+    \item Cognitive Complexity
     \item Halstead Complexity
     \item Coupling
     \item GitHub stars
