--- a/03-cognitive-complexity/03-cognitive-complexity.tex
+++ b/03-cognitive-complexity/03-cognitive-complexity.tex
@@ -32,20 +32,20 @@
 \pitch{\pptQuote{ann-campbell.jpg}{A guiding principle in the formulation of Cognitive Complexity has been that it should incent good coding practices. That is, it should either ignore or discount features that make code more readable}{G. Ann Campbell, Sonar Source S.A., 2017}}
 
 \pitch{
-\pptBanner{Cyclomatic Complexity (CoCo)}
+\pptBanner{Cyclomatic Complexity}
 \pptPic{.9}{motive-before.png}\par
 ``The mathematical model underlying Cyclomatic Complexity gives these two
 methods equal weight, yet it is intuitively obvious that the control flow of
 \ff{sumOfPrimes} is more difficult to understand than that of \ff{getWords}'' --- G. Ann Campbell}
 
 \pitch{
-\pptBanner{Cognitive Complexity}
+\pptBanner{Cognitive Complexity (CoCo)}
 \pptPic{.9}{motive-after.png}\par
 ``The Cognitive Complexity algorithm gives these two methods markedly different
 scores, ones that are far more reflective of their relative understandability.'' --- G. Ann Campbell}
 
 \pitch{
-``Being able to find statistical correlations between code understandability and source code measures would be greatly beneficial for the software development process, which involves a great deal of activities involving program comprehension'' --- \textit{An Empirical Evaluation of the ``Cognitive Complexity'' Measure as a Predictor of Code Understandability}, Journal of Systems and Software (197), 2023.}
+``Being able to find statistical correlations between code understandability and source code measures would be greatly beneficial for the software development process, which involves a great deal of activities involving program comprehension'' --- Luigi Lavazza et al., \textit{An Empirical Evaluation of the ``Cognitive Complexity'' Measure as a Predictor of Code Understandability}, Journal of Systems and Software (197), 2023.}
 
 \pitch{CoCo is supported in a few static analyzers:
 \begin{itemize}
@@ -59,7 +59,11 @@ scores, ones that are far more reflective of their relative understandability.''
 
 \thought{``Perceived complexity'' is human's impression and conceptualization of a system as being complex.}
 
-\pitch{``\emph{Social code analysis} enriches our understanding of the code quality by overlaying a \emph{developer's behavior} with the \emph{structural analysis} of the code'' --- \href{https://www.thoughtworks.com/en-de/radar/techniques/social-code-analysis}{Technology Radar} of ThoughtWorks, March 2017}
+\pitch{\pptQuote{michael-pradel.jpg}{Neural software analysis offers a fresh approach, enhancing or even surpassing traditional program analysis in some areas}{Michael Pradel and Satish Chandra \newline \emph{Neural Software Analysis}, \newline Communications of the ACM 65(1), 2022}}
+
+\pitch{\pptBanner{Social Code Analysis}``\emph{Social code analysis} enriches our understanding of the code quality by overlaying a \emph{developer's behavior} with the \emph{structural analysis} of the code'' --- \href{https://www.thoughtworks.com/en-de/radar/techniques/social-code-analysis}{Technology Radar} of ThoughtWorks, March 2017}
+
+\pitch{\pptQuote{helmet.jpg}{BrainMaster Technologies (USA) sells this ``\href{https://brainmaster.com/product/freedom-20r-series/}{Freedom 20R}'' EEG head set for \$31,025. A similar device you can get from \href{https://neiry.ru/about-us}{Neiry} (Russia), for 3\% of this price.}{}}
 
 \plush{
   \pptBanner{Read this:}\par
