--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -84,17 +84,17 @@
     \item McCabe's Cyclomatic Complexity
     \item Cognitive Complexity
     \item Halstead Complexity
+    \item Maintainability index
     \item Coupling
-    \item GitHub stars
-    \item Hits of Code (Code Churn)
     \item LCOMx
     \item PCC
     \item LCC
     \item MMAC and NHD
+    \item GitHub stars
+    \item Hits of Code (Code Churn)
     \item Test Coverage
     \item DSQI
     \item Instruction path length
-    \item Maintainability index
     \item Function Points
     \item Mutation Coverage
     \item Number of methods, classes, etc.
@@ -104,6 +104,7 @@
     \item Build time
     \item Algorithmic complexity Big-O
     \item Code duplication
+    \item Neural Metrics
 \end{enumerate}
 
 Порядок лекций может меняться, а тематика корректироваться в зависимости от интереса аудитории.
