--- a/04-halstead-complexity/04-halstead-complexity.tex
+++ b/04-halstead-complexity/04-halstead-complexity.tex
@@ -40,6 +40,11 @@
 }
 
 \pitch{
+\pptBanner{Example from Wikipedia}
+\pptPic{.8}{example.png}
+}
+
+\pitch{
 \pptBanner{Operators and Operands}
 ``When a program is translated from one language to another, as from FORTRAN to machine language for example, the actual operators and operands may indeed change, but both versions must still consist of combinations of operators and operands. \emph{No other category} of entities need be present.'' --- \textit{Advances in Software Science}, Maurice Halstead, Advances in Computers, Volume 18, 1979
 }
