--- a/04-halstead-complexity/04-halstead-complexity.tex
+++ b/04-halstead-complexity/04-halstead-complexity.tex
@@ -27,7 +27,7 @@
 
 \plush{\sqmTitlePage{4}}
 
-\pitch{\pptQuote{maurice-halstead.jpg}{Any attempt to find a universal set of metrics that could be applied to any computer program, might at first glance appear destined to be unfruitful, if not merely difficult. But, without universal, measurable parameters, we would be in the position of trying to develop the science of thermodynamics before the advent of a temperature scale.}{Maurice H. Halstead, \newline \textit{Elements of Software Science}, 1977}}
+\pitch{\pptQuote{maurice-halstead.jpg}{Any attempt to find a \emph{universal} set of metrics that could be applied to any computer program, might at first glance appear destined to be unfruitful, if not merely \emph{difficult}. But, without universal, measurable parameters, we would be in the position of trying to develop the science of thermodynamics before the advent of a temperature scale.}{Maurice H. Halstead, \newline \textit{Elements of Software Science}, 1977}}
 
 \plush{
 \pptBanner{Inputs}
