--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -27,7 +27,9 @@
 
 \plush{\sqmTitlePage{5}}
 
-\pitch{\pptQuote{fred-brooks.jpg}{The total cost of maintaining a widely used program is typically 40 percent or more of the cost of developing it}{Fred Brooks, \textit{The Mythical Man-Month: Essays on Software Engineering}, 1982}}
+\pitch{\pptQuote{fred-brooks.jpg}{The total \emph{cost of maintaining} a widely used program is typically 40 percent or more of the cost of developing it}{Fred Brooks, \textit{The Mythical Man-Month: Essays on Software Engineering}, 1982}}
+
+\pitch{\pptQuote{ward-cunningham.jpg}{Shipping first time code is like going into \emph{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as interest on that debt.}{Ward Cunningham, \textit{Experience Report --- The WyCash portfolio management system}, OOPSLA, 1992}}
 
 \pitch{\pptQuote{anonymous-2.png}{Before developers can claim that they are building maintainable systems, there must be some way to \emph{measure} maintainability}{Don Coleman and Dan Ash (Hewlett Packard), Bruce Lowther (Micron Semiconductor), \emph{Paul Oman} (University of Idaho), \textit{Using Metrics to Evaluate Software System Maintainability}, 1994}}
 
@@ -91,7 +93,7 @@
 
 \plush{\pptThought{``Tool smiths and vendors used the exact same formula and coefficients as the 1994 experiments, without any recalibration.'' --- Arie van Deursen}}
 
-\pitch{\pptQuote{tim-gilboy.jpg}{If we're going to use the Maintainability Index we should use it to measure relative maintainability within our project rather than use it as an absolute metric.}{Tim Gilboy, \textit{Maintainability Index - What is it and where does it fall short?}, 2022, \href{https://sourcery.ai/blog/maintainability-index/}{link}}}
+\pitch{\pptQuote{tim-gilboy.jpg}{If we're going to use the Maintainability Index we should use it to measure \emph{relative} maintainability within our project rather than use it as an \emph{absolute} metric.}{Tim Gilboy, \textit{Maintainability Index - What is it and where does it fall short?}, 2022, \href{https://sourcery.ai/blog/maintainability-index/}{link}}}
 
 \plush{\pptThought{\raggedright``Extending the length can significantly decrease Maintainability Index, even if all of the changes cause the code to be clearer and more understandable.'' --- Tim Gilboy}}
 
@@ -104,6 +106,7 @@
 \item \href{https://www.verifysoft.com/en_maintainability.html}{Testwell} for Java and C++
 \item \href{https://radon.readthedocs.io/en/latest/index.html}{Radon} for Python
 \item \href{https://www.npmjs.com/package/jscomplexity}{jscomplexity} for JavaScript
+\item \href{https://github.com/yagipy/maintidx}{maintidx} for Go
 \end{itemize}}
 
 \plush{
@@ -112,5 +115,19 @@
   \textit{Using Metrics to Evaluate Software System Maintainability}, Don Coleman et al., Computer, Volume 18, Issue 8, 1994\par
   \textit{Exploring Maintainability Index Variants for Software Maintainability Measurement in Object-Oriented Systems}, Tja\u{s}a Heri\u{c}ko and Bo\u{s}tjan \u{S}umak, Applied Sciences, 2023\par
 }
+
+\pitch{\pptBanner{Milestones of Your Research}
+\begin{enumerate}\setlength\itemsep{-.5em}
+\item Research Question(s)
+\item Research Method
+\item Experiments
+\item Related Work
+\item Results
+\item Limitations
+\item Discussion
+\item Introduction
+\item Abstract
+\item Title
+\end{enumerate}}
 
 \end{document}
