--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -109,6 +109,9 @@
 \item \href{https://github.com/yagipy/maintidx}{maintidx} for Go
 \end{itemize}}
 
+\pitch{\pptQuote{slr.png}{The SLR outcome provided us with \emph{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}{\textit{A Tool-Based Perspective on Software Code Maintainability
+Metrics: A Systematic Literature Review}, Luca Ardito et al., Scientific Programming, 2020}}
+
 \plush{
   \pptBanner{Read this:}\par
   \textit{Metrics for Assessing a Software System's Maintainability}, Paul Oman and Jack Hagemeister, Proceedings of the International Conference on Software Maintenance (ICSM), 1992\par
