--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -120,7 +120,8 @@ Metrics: A Systematic Literature Review}, Luca Ardito et al., Scientific Program
 }
 
 \pitch{\pptBanner{Milestones of Your Research}
-\begin{enumerate}\setlength\itemsep{-.5em}
+\begin{multicols}{2}
+\begin{enumerate}
 \item Research Question(s)
 \item Research Method
 \item Experiments
@@ -128,9 +129,10 @@ Metrics: A Systematic Literature Review}, Luca Ardito et al., Scientific Program
 \item Results
 \item Limitations
 \item Discussion
+\item Conclusion
 \item Introduction
 \item Abstract
 \item Title
-\end{enumerate}}
+\end{enumerate}\end{multicols}}
 
 \end{document}
