--- a/sqm.sty
+++ b/sqm.sty
@@ -29,7 +29,7 @@
 \RequirePackage[dry,increment]{crumbs}
 \RequirePackage[static]{clicks}
 \RequirePackage[template,scheme=light]{ppt-slides}
-\RequirePackage[nocn]{ffcode}
+\RequirePackage[nocn,novert]{ffcode}
 \RequirePackage{to-be-determined}
 \RequirePackage{tikz}
   \usetikzlibrary{positioning,calc,arrows.meta}
