--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -170,6 +170,12 @@ class Article
   \textit{Cohesion and Reuse in an Object-Oriented System},
     James M. Bieman and Byung-Kyoo Kang,
     Proceedings of the Symposium on Software Reusability (SSR), 1995 \par
+  \textit{Code Complete},
+    Steven McConnell,
+    2004\par
+  \textit{Structured Design: Fundamentals of a Discipline of Computer Program and Systems Design},
+    Edward Yourdon and Larry Constantine,
+    Prentice Hall, 1979\par
   \href{https://www.yegor256.com/2016/09/13/inheritance-is-procedural.html}{Inheritance Is a Procedural Technique for Code Reuse} (2016)
 }
 
