--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -84,12 +84,12 @@
     \item McCabe's Cyclomatic Complexity
     \item Cognitive Complexity
     \item Halstead Complexity
-    \item Maintainability index
+    \item Maintainability Index
 
     \item Coupling
-    \item LCOMx
+    \item LCOM 1, 2, 3, 4, 5
+    \item TCC and LCC
     \item PCC
-    \item LCC
     \item MMAC and NHD
     \item DSQI
 
